--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -14,7 +14,13 @@
     border-radius: 50%;
     background-color: rgb(221, 221, 221);
     box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.2);
-    top: 15px;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    bottom: 15px;
+    height: 62px;
+    width: 62px;
   }
 
 }
