--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -21,6 +21,9 @@
                 hint: "we need your current password to confirm your changes",
                 required: true,
                 input_html: { autocomplete: "current-password" } %>
+    <%= f.input :firstname, required: true %>
+    <%= f.input :lastname, required: true %>
+    <%= f.input :nickname, required: true %>
   </div>
 
   <div class="form-actions">
