--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,7 +13,7 @@
         <% end %>
       </li>
       <li class="nav-item">
-        <% if params[:controller] == "rides" && params[:action] == "edit" %>
+        <% if params[:controller] == "pages" && params[:action] == "map" %>
           <%= link_to map_path, class: "nav-link active" do %>
             <i class="fa-solid fa-map-location-dot"></i>
           <% end %>
