--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -25,12 +25,24 @@
       </li>
       <li class="nav-item">
         <% if (params[:controller] == "users" && params[:action] == "show") || params[:controller] == "devise/sessions"%>
-          <%= link_to user_path(current_user), class: "nav-link active" do %>
-            <i class="fa-solid fa-user"></i>
+          <% if user_signed_in? %>
+            <%= link_to user_path(current_user), class: "nav-link" do %>
+              <i class="fa-solid fa-user"></i>
+            <% end %>
+          <% else %>
+            <%= link_to new_user_session_path, class: "nav-link" do %>
+              <i class="fa-solid fa-user"></i>
+            <% end %>
           <% end %>
         <% else %>
-          <%= link_to user_path(current_user), class: "nav-link" do %>
-            <i class="fa-solid fa-user"></i>
+          <% if user_signed_in? %>
+            <%= link_to user_path(current_user), class: "nav-link" do %>
+              <i class="fa-solid fa-user"></i>
+            <% end %>
+          <% else %>
+            <%= link_to new_user_session_path, class: "nav-link" do %>
+              <i class="fa-solid fa-user"></i>
+            <% end %>
           <% end %>
         <% end %>
       </li>
