save show course 2

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,6 +1,47 @@
+<div class="container p-3 class="modal-dialog modal-dialog-centered">
 <h1>Statistique de votre courses</h1>
-
 <h2><%= @course.name %></h2>
+
+<div class="d-flex mb-3">
+  <div class="me-auto p-2">
+    <i class="fa-regular fa-star"></i>
+    <i class="fa-regular fa-star"></i>
+    <i class="fa-regular fa-star"></i>
+    <i class="fa-regular fa-star"></i>
+    <i class="fa-regular fa-star"></i>
+  </div>
+    <div class="p-1">
+      <p>
+        <% if @course.trashs %>
+          <i class="fa fa-trash"></i>
+        <% end %>
+      <p>
+    </div>
+    <div class="p-1">
+      <p>
+        <% if @course.water %>
+          <i class="fa-solid fa-droplet"></i>
+        <% end %>
+      <p>
+    </div>
+    <div class="p-1">
+      <p>
+        <% if @course.poopbag %>
+          <i class="fa-solid fa-poo"></i>
+        <% end %>
+      <p>
+    </div>
+    <div class="p-1">
+      <p>
+        <% if @course.familyfriendly %>
+          <i class="fa-solid fa-people-group"></i>
+        <% end %>
+      <p>
+    </div>
+
+</div>
+
+
 
 
 
@@ -9,39 +50,6 @@
   <%= @course.distance %>
 </p>
 
-<p>
-  <strong>Latitude:</strong>
-  <%= @course.latitude %>
-</p>
-
-<p>
-  <strong>Longitude:</strong>
-  <%= @course.longitude %>
-</p>
-
-<p>
-  <strong>Eau:</strong>
-  <%= @course.water ? 'Oui' : 'Non' %>
-</p>
-
-<p>
-
-<% if @course.trashs %>
-  <i class="fa fa-trash"></i>
-  <% else %>
-      Non
-  <% end %>
-</p>
-
-<p>
-  <strong>Sac à crottes:</strong>
-  <%= @course.poopbag ? 'Oui' : 'Non' %>
-</p>
-
-<p>
-  <strong>Adapté aux familles:</strong>
-  <%= @course.familyfriendly ? 'Oui' : 'Non' %>
-</p>
 
 <p>
   <strong>Difficulté:</strong>
@@ -53,7 +61,5 @@
   <%= @course.timing %>
 </p>
 
-<p>
-  <strong>Utilisateur:</strong>
-  <%= @course.user_id %>
-</p>
+
+</div>
