--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -7,7 +7,14 @@
   <div class="card mb-3">
     <img src="https://vivrebordeaux.fr/wp-content/uploads/2022/04/Jardin-public-de-Bordeaux.jpg" class="card-img-top" alt="Parc Bordelais">
     <div class="card-body">
-      <h5 class="card-title"><%= course.name%></h5>
+      <div class="row">
+        <div class="col-8">
+          <h5 class="card-title"><%= course.name %></h5>
+        </div>
+        <div class="col-4">col</div>
+        <div class="col-8">col</div>
+        <div class="col-4">col</div>
+      </div>
       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
       <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
     </div>
