--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,8 +4,11 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
-
+    <%= f.input :firstname, required: true %>
+    <%= f.input :lastname, required: true %>
+    <%= f.input :nickname, required: true %>
+    <%= f.input :photo, as: :file, required: true %>
+    <%= f.input :email, required: true %>
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
     <% end %>
