--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,22 +1,35 @@
 <div class="p-3 d-flex justify-content-start">
-    <h1>Suggestions</h1>
+    <h1 class="font-weight-bold">Suggestions</h1>
   </div>
 
 <div class="container w-100">
   <% @courses.each do |course| %>
-  <div class="card mb-3">
-    <img src="https://vivrebordeaux.fr/wp-content/uploads/2022/04/Jardin-public-de-Bordeaux.jpg" class="card-img-top" alt="Parc Bordelais">
+  <div class="card-image mb-3">
+    <img src="https://vivrebordeaux.fr/wp-content/uploads/2022/04/Jardin-public-de-Bordeaux.jpg" class="card-img-top" alt="Parc Bordelais"
+    style="border-radius: 5%">
+  </div>
     <div class="card-body">
-      <div class="row">
-        <div class="col-8">
-          <h5 class="card-title"><%= course.name %></h5>
+
+      <div class="d-flex justify-content-between">
+        <h5 class="card-title"><%= course.name %></h5>
+        <div class="d-flex ml-auto">
+            <p class="p-1"><i class="fa fa-trash"></i></p>
+            <p class="p-1"><i class="fa-solid fa-droplet"></i></p>
+            <p class="p-1"><i class="fa-solid fa-poo"></i></p>
+            <p class="p-1"><i class="fa-solid fa-people-group"></i></p>
         </div>
-        <div class="col-4">col</div>
-        <div class="col-8">col</div>
-        <div class="col-4">col</div>
       </div>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      <div class="d-flex justify-content-between">
+        <div>
+          <% course.average.to_i.times do %>
+            <i class="fa-solid fa-star"></i>
+          <% end %>
+          <% (5 - course.average.to_i).times do %>
+            <i class="fa-regular fa-star"></i>
+          <% end %>
+        </div>
+        <div class="card-timing-distance"><%= course.timing %> - <%= course.distance %> km</div>
+      </div>
     </div>
   </div>
   <% end %>
