--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,37 +1,3 @@
-// .card {
-//   width: 350px;
-//   // overflow: hidden;
-//   // transition: all 0.3s;
-//   box-shadow: #000000 0px 19px 38px, rgba(0, 0, 0, 0.1) 0px 15px 12px;
-
-//   // &:hover {
-//   //   transform: scale(1.03);
-//   //   box-shadow: 2px 2px 20px rgba(0, 0, 0, 1);
-//   //   border-radius: 12px;
-//   //   border: 0px transparent;
-//   // }
-//   .image-name {
-//     position: relative;
-//     background-color: rgba(0, 0, 0, 0.2);
-//     padding-left: 10px;
-//     bottom: 55px;
-//     margin-left: 8px;
-//     border-radius: 5px;
-//   }
-
-//   .card-top {
-//     height: 400px;
-//   }
-
-//   // .card-bottom1 {
-//   //   height: 200px;
-
-//   //   .card-description {
-//   //     line-height: 1.2;
-//   //   }
-//   // }
-
-//   // .card-bottom2 {
-//   //   height: 65px;
-//   // }
-// }
+.card-title {
+  font-weight: bold;
+}
