--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,8 @@
-// Specific CSS for your home-page
+.container {
+  margin-bottom: 90px;
+}
+
+.card-image {
+  box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.2);
+  border-radius: 10%;
+}
