--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,7 @@
-test from user show
+<div class="container">
+  <div class="card my-3" id="profil-head">
+    <h1>Bienvenue <%= current_user.firstname %></h1>
+    <%= cl_image_tag current_user.photo.key, class: "user-photo", gravity: "face", height: 100, width: 100, crop: "fill", radius: "max", fetch_format: "auto" %>
+  </div>
+  <%= link_to "Editer mon profil", edit_user_registration_path(current_user), class: "btn btn-primary w-100" %>
+</div>
