--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,3 +1,10 @@
-.card-title {
-  font-weight: bold;
+.card {
+  border: none;
+  border-radius: 5%;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
+  padding: 5px;
+
+  .card-title {
+    font-weight: bold;
+  }
 }
