--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,49 +1,62 @@
 <div class="container p-3">
-  <h1>Statistique de votre courses</h1>
-    <h2><%= @course.name %></h2>
+    <h1>Statistique de votre courses</h1>
 
-  <div class="d-flex mb-3">
-    <div class="me-auto p-2">
-      <i class="fa-regular fa-star"></i>
-      <i class="fa-regular fa-star"></i>
-      <i class="fa-regular fa-star"></i>
-      <i class="fa-regular fa-star"></i>
-      <i class="fa-regular fa-star"></i>
+    <div class="container">
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     </div>
 
-<button type="button" class="border-0 bg-none" data-bs-toggle="modal" data-bs-target="#myModal">
+      <h2><%= @course.name %></h2>
 
-
-        <% if @course.trashs %>
-          <i class="fa fa-trash"></i>
+    <div class="d-flex mb-3">
+      <div class="me-auto p-2">
+        <% @course.average.to_i.times do %>
+          <i class="fa-solid fa-star"></i>
         <% end %>
-        <% if @course.water %>
-          <i class="fa-solid fa-droplet"></i>
+        <% (5 - @course.average.to_i).times do %>
+          <i class="fa-regular fa-star"></i>
         <% end %>
-
-   <% if @course.poopbag %>
-          <i class="fa-solid fa-poo"></i>
-        <% end %>
-          <% if @course.familyfriendly %>
-          <i class="fa-solid fa-people-group"></i>
-        <% end %>
-
-
-
-</button>
-
-<!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
-      <div class="modal-body">
-        <!-- Contenu modal -->
+        <button type="button" class="border-0 bg-body" data-bs-toggle="modal" data-bs-target="#myModal">
+            <% if @course.trashs %>
+              <i class="fa fa-trash"></i>
+            <% end %>
+            <% if @course.water %>
+              <i class="fa-solid fa-droplet"></i>
+            <% end %>
+
+          <% if @course.poopbag %>
+              <i class="fa-solid fa-poo"></i>
+            <% end %>
+              <% if @course.familyfriendly %>
+              <i class="fa-solid fa-people-group"></i>
+            <% end %>
+        </button>
+        <div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+              <div class="modal">
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+                <div class="modal-body border-0 row">
+                  <p class= "col-6">Poubelles: <i class="fa fa-trash"></i></p>
+                  <p class= "col-6">Points d'eau: <i class="fa-solid fa-droplet"></i> </p>
+                  <p class= "col-6">Sacs canin: <i class="fa-solid fa-poo"></i></p>
+                  <p class= "col-6">Family friendly: <i class="fa-solid fa-people-group"></i></p>
+                </div>
+            </div>
+          </div>
       </div>
-      <div class="modal-footer">
-      </div>
+    </div>
+    <div >
+    <p>Distance:</p>
+    <p>Difficulté:</p>
+    <p>Timing:</p>
+    <p>Description:</p>
     </div>
   </div>
-</div>
