--- a/app/assets/stylesheets/users/_show.scss
+++ b/app/assets/stylesheets/users/_show.scss
@@ -9,4 +9,17 @@
     box-shadow: 2px 2px 13px rgba(0, 0, 0, 0.4);
   }
 
+  .links {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 50px;
+
+    .btn {
+      margin: 0.7rem 0;
+      width: 70%;
+      border-radius: 2rem;
+    }
+  }
 }
