--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,9 +1,13 @@
-.navbar {
+#navbar {
   height: 5rem;
   box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.2);
   padding: 0 15px;
   font-size: 1.5rem;
-
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  z-index: 10000;
+  min-width: 100%;
   .nav-item {
     height: 62px;
     width: 62px;
