--- a/app/assets/stylesheets/components/_topbar.scss
+++ b/app/assets/stylesheets/components/_topbar.scss
@@ -1,6 +1,8 @@
 #topbar {
   height: 7.5rem;
-  position: relative;
+  position: sticky;
+  top: 0;
+  z-index: 10000;
 
   .logo{
     height: 50px;
