--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar navbar-expand-lg bg-white fixed-bottom">
+<div class="navbar navbar-expand-lg bg-white" id="navbar">
   <div class="container-fluid">
     <ul class="navbar-nav flex-row w-100 justify-content-around align-items-center text-center">
       <li class="nav-item">
