--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar navbar-expand-lg bg-white w-100 fixed-top" id="topbar">
+<div class="navbar navbar-expand-lg bg-white w-100" id="topbar">
   <div class="container-fluid w-100 justify-content-center align-items-center">
     <%= link_to root_path, class: "logo" do %>
       <%= image_tag "logo", height: "50px" %>
