--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -8,7 +8,10 @@
   <%= link_to course_path(course), class: "text-decoration-none text-white" do %>
     <div class="card mb-3">
       <div class="card-image mb-3">
-        <div class="fa-solid fa-medal p-3"style="border-radius: 12px 12px 0 0;height: 230px; width: 100%; background-repeat: no-repeat; background-size: cover; background-image: url('<%= cl_image_path course.photos.first.key, transformation: { dpr: "auto", responsive: true, width: "auto", crop: "scale", gravity: :face} %>')">
+        <div style="position: relative; border-radius: 12px 12px 0 0;height: 230px; width: 100%; background-repeat: no-repeat; background-size: cover; background-image: url('<%= cl_image_path course.photos.first.key, transformation: { dpr: "auto", responsive: true, width: "auto", crop: "scale", gravity: :face} %>')">
+          <% if Ride.exists?(user: current_user, course: course) %>
+            <i class="fa-solid fa-medal" style="font-size: 2rem; position: absolute; right: 15px; top: 15px;"></i>
+          <% end %>
         </div>
       </div>
       <div class="card-body">
