--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -1,18 +1,8 @@
 <div class="container mt-3" id="home-dogs">
-  <div class="cards align-items-center d-flex flex-column" data-controller="modal-dog">
-    <%= turbo_frame_tag "modal" do %>
-      <%= render "form", dog: @dog %>
-    <% end %>
+  <div class="cards align-items-center d-flex flex-column" data-controller="modal-dog" data-modal-dog-target="dogs">
+    <%= render "form", dog: @dog %>
     <% @dogs.each do |dog| %>
-      <div class="card mx-4" style="width: 16rem;">
-        <%= cl_image_tag dog.photo.key, height: 150, width: 150, crop: "fill", radius: "max", class: "dog-image" %>
-        <div class="card-body d-flex flex-column align-items-center">
-          <h5 class="card-title"><%= dog.name %></h5>
-          <p class="card-text">Age: <%= dog.age %></p>
-          <p class="card-text">Race: <%= dog.race %></p>
-          <%= link_to "Retirer", dog_path(dog), data: { turbo_method: "delete", turbo_confirm: "Êtes-vous sûrs ?"}, class: "btn btn-primary" %>
-        </div>
-      </div>
+      <%= render 'dog', dog: dog %>
     <% end %>
   </div>
 </div>
