--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,3 +1,37 @@
+<div class="dropdown">
+  <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
+    Caractéristiques
+  </button>
+  <%# <div class="dropdown-menu" aria-labelledby="dropdownMenuButton"> %>
+    <%= simple_form_for(:filter, url: root_path, method: "GET", html: { class: 'dropdown-menu' }) do |f| %>
+      <%= f.input :water,
+                  as: :boolean,
+                  label: 'Eau',
+                  wrapper_html: { class: 'dropdown-item' },
+                  input_html: { checked: params[:filter] && params[:filter][:water] == "1" }
+                  %>
+      <%= f.input :trashs,
+                  as: :boolean,
+                  label: 'Déchets',
+                  wrapper_html: { class: 'dropdown-item' },
+                  input_html: { checked: params[:filter] && params[:filter][:trashs] == "1" }
+                  %>
+      <%= f.input :poopbag,
+                  as: :boolean,
+                  label: 'Sac à crottes',
+                  wrapper_html: { class: 'dropdown-item' },
+                  input_html: { checked: params[:filter] && params[:filter][:poopbag] == "1" }
+                  %>
+      <%= f.input :familyfriendly,
+                  as: :boolean,
+                  label: 'Convient aux familles',
+                  wrapper_html: { class: 'dropdown-item' },
+                  input_html: { checked: params[:filter] && params[:filter][:familyfriendly] == "1" }
+                  %>
+      <%= f.button :submit, "Filtrer", class: 'btn btn-primary dropdown-item' %>
+    <% end %>
+  <%# </div> %>
+</div>
 
 <div class="p-3 d-flex justify-content-start">
   <h1 class="font-weight-bold">Suggestions</h1>
@@ -17,11 +51,23 @@
       <div class="card-body">
         <div class="d-flex justify-content-between">
           <h5 class="card-title"><%= course.name %></h5>
-          <div class="d-flex ml-auto">
-              <p class="p-1"><i class="fa fa-trash"></i></p>
+          <div class="d-flex ml-auto gap-1">
+            <% if course.trashs %>
+              <i class="fa fa-trash gap-1"></i>
+            <% end %>
+            <% if course.water %>
+              <i class="fa-solid fa-droplet gap-1"></i>
+            <% end %>
+            <% if course.poopbag %>
+              <i class="fa-solid fa-poo"></i>
+            <% end %>
+            <% if course.familyfriendly %>
+              <i class="fa-solid fa-people-group gap-1"></i>
+            <% end %>
+              <%# <p class="p-1"><i class="fa fa-trash"></i></p>
               <p class="p-1"><i class="fa-solid fa-droplet"></i></p>
               <p class="p-1"><i class="fa-solid fa-poo"></i></p>
-              <p class="p-1"><i class="fa-solid fa-people-group"></i></p>
+              <p class="p-1"><i class="fa-solid fa-people-group"></i></p> %>
           </div>
         </div>
         <div class="d-flex justify-content-between">
