--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,13 +1,47 @@
 <div class="container">
   <div class="card p-3 d-flex justify-content-center my-3">
     <div class="container mb-4">
-      <div style="position: relative; height: 230px; width: 100%; background-repeat: no-repeat; background-size: cover; background-image: url('<%= cl_image_path @course.photos.first.key, transformation: { dpr: "auto", responsive: true, width: "auto", crop: "scale", gravity: :face} %>')">
+      <div style="position: relative; height: 230px; width: 100%; background-repeat: no-repeat; background-size: cover; background-image: url('<%= cl_image_path @course.photos.last.key, transformation: { dpr: "auto", responsive: true, width: "auto", crop: "scale", gravity: :face} %>')">
         <% if Ride.exists?(user: current_user, course: @course) %>
           <i class="fa-solid fa-medal" style="font-size: 2rem; position: absolute; right: 15px; top: 15px; z-index: 1;"></i>
         <% end %>
         <%= link_to :back, class: 'btn btn-lg', style: 'border: none; position: absolute; right: 5px; top: 5px;' do %>
           <div class= "btn-return"><i class="fa-solid fa-arrow-left" style="font-size: 2rem;"></i></div>
         <% end %>
+      </div>
+         <div class="d-flex justify-content-center p-1">
+      <button type="button" class="border-0 btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModalAvis">Photo de la</button>
+    </div>
+    <div class="modal fade" id="myModalAvis" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-body border-0">
+            <!-- Carrousel -->
+            <div id="carouselExampleFade" class="carousel slide carousel-fade">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <%= cl_image_tag @course.photos.first.key %>
+                </div>
+                <div class="carousel-item">
+                  <%= cl_image_tag @course.photos.second.key %>
+                </div>
+                <div class="carousel-item">
+                  <%= cl_image_tag @course.photos.last.key %>
+                </div>
+              <!-- Ajoutez d'autres éléments de carrousel si nécessaire -->
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Précédent</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Suivant</span>
+              </button>
+            </div>
+            <!-- Fin du carrousel -->
+          </div>
+        </div>
       </div>
     </div>
     <h2><%= @course.name %></h2>
@@ -50,12 +84,16 @@
         </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-sm-4 mb-1">Distance: <%= @course.distance %></div>
-      <div class="col-sm-4 mb-1">Difficulté: <%= @course.difficulty %></div>
-      <div class="col-sm-4 mb-1">Timing: <%= @course.timing %></div>
-      <div class="col-sm-4 mb-1">Description: <%= @course.description %></div>
-    </div>
+
+<div class="container m-0">
+  <div class="row row-cols-2">
+    <div class="col-sm-4">Distance : <%= @course.distance %>m</div>
+    <div class="col-sm-4">Difficulté : <%= @course.difficulty %>/5</div>
+   <div class="col-sm-4">Timing : <%= @course.timing %>min</div>
+  </div>
+  <div class="col-12">Description : <%= @course.description %></div>
+</div>
+
     <div class="d-flex justify-content-end">
       <button type="button" class="border-0 btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModalAvis">Avis</button>
     </div>
