--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,33 +1,32 @@
 <div class="container">
-<div class="card d-flex p-1 justify-content-center my-3">
-  <div style="height: 230px; width: 100%;;">
-    <%= render 'map', height: 200 %>
-    <% if Ride.exists?(user: current_user, course: @course) %>
-      <i class="fa-solid fa-medal" style="font-size: 2rem; position: absolute; right: 15px; top: 15px; z-index: 1;"></i>
-    <% end %>
-    <%= link_to :back, class: 'btn btn-lg', style: 'border: none; position: absolute; right: 5px; top: 5px;' do %>
-      <div class= "btn-return"><i class="fa-solid fa-arrow-left" style="font-size: 2rem;"></i></div>
-    <% end %>
+  <div class="card d-flex p-1 justify-content-center my-3">
+    <div style="height: 230px; width: 100%;;">
+      <%= render 'map', height: 200 %>
+      <% if Ride.exists?(user: current_user, course: @course) %>
+        <i class="fa-solid fa-medal" style="font-size: 2rem; position: absolute; right: 15px; top: 15px; z-index: 1;"></i>
+      <% end %>
+      <%= link_to :back, class: 'btn btn-lg', style: 'border: none; position: absolute; right: 5px; top: 5px;' do %>
+        <div class= "btn-return"><i class="fa-solid fa-arrow-left" style="font-size: 2rem;"></i></div>
+      <% end %>
     </div>
     <div class="d-flex justify-content-center p-1">
-      <button type="button" class="border-0 btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModalAvis">Photo de la</button>
+      <button type="button" class="border-0 btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalPhoto">Photo de la course</button>
     </div>
-    <div class="modal fade" id="myModalAvis" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="modalPhoto" tabindex="-1" aria-labelledby="modal photo" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
-          <div class="modal-body border-0">
+          <div class="modal-body border-0 p-0">
             <!-- Carrousel -->
             <div id="carouselExampleFade" class="carousel slide carousel-fade">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <%= cl_image_tag @course.photos.first.key %>
+                  <%= cl_image_tag @course.photos.first.key, crop: "fill", height: 300, width: 380  %>
                 </div>
-                <div class="carousel-item">
-                  <%= cl_image_tag @course.photos.second.key %>
-                </div>
-                <div class="carousel-item">
-                  <%= cl_image_tag @course.photos.last.key %>
-                </div>
+                <% @course.photos[1..-1].each do |photo| %>
+                  <div class="carousel-item">
+                    <%= cl_image_tag photo.key, crop: "fill", height: 300, width: 380 %>
+                  </div>
+                <% end %>
               <!-- Ajoutez d'autres éléments de carrousel si nécessaire -->
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -43,15 +42,6 @@
           </div>
         </div>
       </div>
-  <div class="card d-flex p-1 justify-content-center my-3">
-    <div style="height: 230px; width: 100%;;">
-      <%= render 'map', height: 200 %>
-      <% if Ride.exists?(user: current_user, course: @course) %>
-        <i class="fa-solid fa-medal" style="font-size: 2rem; position: absolute; right: 15px; top: 15px; z-index: 1;"></i>
-      <% end %>
-      <%= link_to :back, class: 'btn btn-lg', style: 'border: none; position: absolute; right: 5px; top: 5px;' do %>
-        <div class= "btn-return"><i class="fa-solid fa-arrow-left" style="font-size: 2rem;"></i></div>
-      <% end %>
     </div>
     <h2><%= @course.name %></h2>
     <div class="d-flex mb-3">
@@ -93,16 +83,14 @@
         </div>
       </div>
     </div>
-
-<div class="container m-0">
-  <div class="row row-cols-2">
-    <div class="col-sm-4">Distance : <%= @course.distance %>m</div>
-    <div class="col-sm-4">Difficulté : <%= @course.difficulty %>/5</div>
-   <div class="col-sm-4">Timing : <%= @course.timing %>min</div>
-  </div>
-  <div class="col-12">Description : <%= @course.description %></div>
-</div>
-
+    <div class="container m-0">
+      <div class="row row-cols-2">
+        <div class="col-sm-4">Distance : <%= @course.distance %>m</div>
+        <div class="col-sm-4">Difficulté : <%= @course.difficulty %>/5</div>
+      <div class="col-sm-4">Timing : <%= @course.timing %>min</div>
+      </div>
+      <div class="col-12">Description : <%= @course.description %></div>
+    </div>
     <div class="d-flex justify-content-end">
       <button type="button" class="border-0 btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModalAvis">Avis</button>
     </div>
