--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -8,3 +8,18 @@
   text-align: center;
   transition: all 0.3s;
 }
+
+.btn-primary {
+  display: inline-flex;
+  position: relative;
+  align-items: center;
+  justify-content: center;
+  background-color: #007bff;
+  border: 1px solid #5781ad;
+  border-radius: 10px;
+  margin-block: 10px 10px;
+  padding: 10px 20px;
+  color: #fff;
+  text-align: center;
+  font-weight: bold;
+}
