--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,5 +1,5 @@
 <div class="dropdown">
-  <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
+  <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownFilters" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
     Caractéristiques
   </button>
   <%# <div class="dropdown-menu" aria-labelledby="dropdownMenuButton"> %>
