--- a/app/assets/stylesheets/rewards/home.scss
+++ b/app/assets/stylesheets/rewards/home.scss
@@ -2,7 +2,7 @@
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background-color: blue;
+  background-color: darkgray;
   position: relative;
 }
 
@@ -10,7 +10,7 @@
   content: "";
   width: 32px;
   height: 5px;
-  background-color: blue;
+  background-color: darkgray;
   top: 23px;
   left: 49px;
   position: absolute;
@@ -20,7 +20,7 @@
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background-color: blue;
+  background-color: darkgray;
   position: relative;
 }
 
@@ -45,4 +45,8 @@
   top: 23px;
   right: 49px;
   position: absolute;
+}
+
+.plaisir {
+  font-weight: bold;
 }
