--- a/app/views/rewards/_doogcount.html.erb
+++ b/app/views/rewards/_doogcount.html.erb
@@ -1,10 +1,10 @@
 <h2 class="font-weight-bold"><i class="fa-solid fa-paw"></i>  Mes Doogies</h2>
 <div class="d-flex align-items-center" style="gap: 30px">
 
-<% raise  %>
+<%# raise  %>
   <% 5.times do |position| %>
     <div class="d-flex flex-column align-items-center">
-      <div class="mb-2"><%= 5*position %></div>
+      <div class="mb-2"><%= 50*position %></div>
       <div class="<%= logodoggies_class(position) %> d-flex justify-content-center align-items-center">
         <i class="fa-solid fa-paw" style="color: #ffffff;"></i>
       </div>
