--- a/app/views/rewards/index.html.erb
+++ b/app/views/rewards/index.html.erb
@@ -7,7 +7,9 @@
       <h2 class="font-weight-bold">Les bons plans  <i class="fa-solid fa-coins"></i></h2>
     </div>
 
-
+    <div class="plaisir">
+      <p><i class="fa-solid fa-paw ms-3"> 50 - </i> Petit plaisir du moment </p>
+    </div>
 
 
   </div>
