--- a/app/views/rides/edit.html.erb
+++ b/app/views/rides/edit.html.erb
@@ -1,1 +1,1 @@
-<%= render "shared/map", course: @ride.course, style_list: "width: 100%; height: 475px;", direct: "direct" %>
+<%= render "shared/map", course: @ride.course, style_list: "width: 100%; height: 475px;" %>
