--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,12 +13,12 @@
         <% end %>
       </li>
       <li class="nav-item">
-        <% if params[:controller] == "rides" && params[:action] == "edit" %>
-          <%= link_to root_path, class: "nav-link active" do %>
+        <% if (params[:controller] == "rides" && params[:action] == "edit") || (params[:controller] == "rides" && params[:action] == "map") %>
+          <%= link_to map_path, class: "nav-link active" do %>
             <i class="fa-solid fa-map-location-dot"></i>
           <% end %>
         <% else %>
-          <%= link_to root_path, class: "nav-link" do %>
+          <%= link_to map_path, class: "nav-link" do %>
             <i class="fa-solid fa-map-location-dot"></i>
           <% end %>
         <% end %>
