--- a/app/views/rewards/_doogcount.html.erb
+++ b/app/views/rewards/_doogcount.html.erb
@@ -1,4 +1,4 @@
-<h2 class="font-weight-bold"><i class="fa-solid fa-paw"></i>  Mes Doogies</h2>
+<h2 class="font-weight-bold font-monospace"><i class="fa-solid fa-paw"></i>  100 Doogies</h2>
 <div class="d-flex align-items-center" style="gap: 30px">
 
 <%# raise  %>
@@ -10,6 +10,4 @@
       </div>
     </div>
   <% end %>
-
-
 </div>
