--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,7 @@
 @import "users/index";
 @import "dogs/index";
 @import "rewards/index";
+@import "rides/index";
 
 //Import Mapbox libraries
 @import url("https://api.mapbox.com/mapbox-gl-js/v3.1.2/mapbox-gl.css");
