--- a/app/views/rides/edit.html.erb
+++ b/app/views/rides/edit.html.erb
@@ -1,1 +1,27 @@
-<%= render "shared/map", course: @ride.course, style_list: "width: 100%; height: 475px;" %>
+<div data-controller="timer">
+  <div id="ready-to-run" class="opacity-0">
+    <div id="ready-to-run-cards">
+      <div class="card align-items-center">
+        <h1 class="text-center">Vous êtes arrivés ! Prêt ?</h1>
+        <%# <%= link_to 'GO !', course_rides_path(@course), data: { 'turbo-method' => :post, constroller: "redirect-ride" }, class: 'btn btn-primary btn-launch-ride w-50' %> %>
+      </div>
+    </div>
+  </div>
+  <div id="timer-container">
+    <div id="timer-cards">
+      <div class="card align-items-center">
+        <h1 class="text-center d-none fs-3" id="finish">👏Bravo ! Vous avez fini !👏</h1>
+        <h3 class="text-center mb-0" id="timer">0:00</h3>
+        <%= simple_form_for @ride do |f| %>
+          <div class="form-inputs">
+            <%= f.input :timing, required: true, :as => :hidden %>
+          </div>
+          <div class="form-actions">
+            <%= f.button :submit, "Stopper la course !", class: "btn btn-primary" %>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
+  <%= render "shared/map", course: @ride.course, style_list: "width: 100%; height: 650px;" %>
+</div>
