--- a/app/views/shared/_map.html.erb
+++ b/app/views/shared/_map.html.erb
@@ -1,4 +1,12 @@
-<% if params[:controller] == "rides" && params[:action] == "edit" %>
+<% if params[:controller] == "rides" && params[:action] == "edit" && @ride.course_id = 62 %>
+  <div style= '<%= style_list %>'
+    data-controller="ride-map-demo"
+    data-ride-map-demo-route-value="<%= course.route %>"
+    data-ride-map-demo-courselocation-value="<%= [course.longitude, course.latitude] %>"
+    data-ride-map-demo-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+    <div id="instructions" data-ride-map-demo-target="instruction" style="height: 150px;" class="opacity-0"></div>
+  </div>
+<% elsif params[:controller] == "rides" && params[:action] == "edit" %>
   <div style= '<%= style_list %>'
     data-controller="ride-map"
     data-ride-map-markers-value="<%= [{ lat: course.latitude, lng: course.longitude }].to_json %>"
@@ -11,11 +19,21 @@
     data-index-map-markers-value="<%= markers.to_json%>"
     data-index-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
   </div>
+<% elsif params[:course_id] == "53" %>
+  <div style= '<%= style_list %>'
+    data-controller="navigate-demo"
+    data-navigate-demo-course-value="<%= [{ lat: course.latitude, lng: course.longitude }].to_json %>"
+    data-navigate-demo-markers-value="<%= markers.to_json%>"
+    data-navigate-demo-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+    <div id="instructions" data-navigate-demo-target="instruction" style="height: 150px;"></div>
+  </div>
 <% elsif params[:controller] == "rides" && params[:action] == "navigate" %>
   <div style= '<%= style_list %>'
-    data-controller="navigate"
-    data-navigate-markers-value="<%= [{ lat: course.latitude, lng: course.longitude }].to_json %>"
-    data-navigate-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+    data-controller="navigate-live"
+    data-navigate-live-course-value="<%= [{ lat: course.latitude, lng: course.longitude }].to_json %>"
+    data-navigate-live-markers-value="<%= markers.to_json%>"
+    data-navigate-live-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+    <div id="instructions" data-navigate-live-target="instruction"></div>
   </div>
 <% elsif params[:controller] == "courses" && params[:action] == "show"%>
   <div style= '<%= style_list %>'
