--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,10 +1,24 @@
 #dropdownFilters {
   display: inline-block;
+  background-color: $light-gray;
+  color: $brown;
+  border: 1.5px solid $brown;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  transition-duration: 0.4s;
+  // background-color: $brown;
+  // color: white;
   position: relative;
   border-radius: 5px;
+  margin-top: 5px;
   margin: 5px;
   padding: 10px;
   font-size: 1em;
+  font-weight: bold;
   text-align: center;
   transition: all 0.3s;
+
+  &:hover {
+    background-color: $brown;
+    color: white;
+  }
 }
