--- a/app/assets/stylesheets/components/_topbar.scss
+++ b/app/assets/stylesheets/components/_topbar.scss
@@ -3,12 +3,15 @@
   position: sticky;
   top: 0;
   z-index: 10000;
-
-  .logo{
-    height: 50px;
-    width: 50px;
-    border-radius: 50%;
-    box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.2);
+  h1 {
+    max-width: 220px;
+    text-align: center;
+  }
+  .logo {
+    height: 70px;
+    width: 70px;
+    // border-radius: 50%;
+    // box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.2);
     display: flex;
     justify-content: center;
     align-items: center;
