--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,10 +1,16 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #FD1015;
-$blue: #0D6EFD;
-$yellow: #FFC65A;
-$orange: #E67E22;
-$green: #1EDD88;
-$gray: #0E0000;
-$light-gray: #F4F4F4;
+$red: #fd1015;
+$blue: #0d6efd;
+$yellow: #ffc65a;
+$light-yellow: #fceb9c;
+$orange: #e67e22;
+$light-orange: #faac54;
+$green: #1edd88;
+$light-green: #a3e893;
+$light-brown: #d19b62;
+$light-beige: #ffe5ca;
+$brown: #895f33;
+$gray: #0e0000;
+$light-gray: #f4f4f4;
