--- a/app/assets/stylesheets/rewards/_home.scss
+++ b/app/assets/stylesheets/rewards/_home.scss
@@ -34,14 +34,14 @@
 }
 
 .reached {
-  background-color: rgb(138, 29, 140);
+  background-color: #a3e893;
 }
 
 .middle::before {
   content: "";
   width: 32px;
   height: 5px;
-  background-color: rgb(138, 29, 140);
+  background-color: #a3e893;
   top: 23px;
   right: 49px;
   position: absolute;
