save show ride 1

--- a/app/views/courses/<div class="modal fade" id="myModalAvis".html
+++ b/app/views/courses/<div class="modal fade" id="myModalAvis".html
@@ -94,3 +94,10 @@
     </div>
   </div>
 </div>
+
+
+
+<%= link_to "Dépense tes Doogs", rewards_path %>
+
+<div class="d-flex justify-content-center align-items-center" style="height: 30vh;">
+  <h5 class="display-5">BRAVO !</h5>
