--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -115,7 +115,7 @@
               <p class= "col-6">Poubelles: <i class="fa fa-trash"></i></p>
               <p class= "col-6">Points d'eau: <i class="fa-solid fa-droplet"></i> </p>
               <p class= "col-6">Sacs canin: <i class="fa-solid fa-poo"></i></p>
-              <p class= "col-6">Family friendly: <i class="fa-solid fa-people-group"></i></p>
+              <p class= "col-6">Convient au famille: <i class="fa-solid fa-people-group"></i></p>
             </div>
           </div>
         </div>
