--- a/app/assets/stylesheets/components/_topbar.scss
+++ b/app/assets/stylesheets/components/_topbar.scss
@@ -7,9 +7,8 @@
     max-width: 220px;
     text-align: center;
   }
+
   .logo {
-    height: 70px;
-    width: 70px;
     // border-radius: 50%;
     // box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.2);
     display: flex;
@@ -17,6 +16,9 @@
     align-items: center;
     position: absolute;
     left: 10px;
+    .image-logo {
+      height: 40px !important;
+    }
   }
 
   .doogs-container {
