--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -9,10 +9,10 @@
   // color: white;
   position: relative;
   border-radius: 5px;
-  margin-top: 10px;
-  margin: 10px;
+  margin-top: 15px;
+  // margin: 10px;
   padding: 10px;
-  font-size: 1em;
+  font-size: 20px;
   font-weight: bold;
   text-align: center;
   transition: all 0.3s;
