--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -9,6 +9,12 @@
 $body-font: "Teachers", sans-serif;
 $headers-font: "Teachers", sans-serif;
 
+h2 {
+  font-family: "Teachers", sans-serif !important;
+  font-weight: bold !important;
+  color: #895f33 !important;
+}
+
 h1 {
   font-family: "Pacifico", cursive !important;
 }
