--- a/app/views/rewards/_doogpresent50.html.erb
+++ b/app/views/rewards/_doogpresent50.html.erb
@@ -1,8 +1,8 @@
-<div class="row gap-1 doogpresent50">
+<div class="row gap-1 doogpresent50" style="color: #895f33;">
   <div class="card col">
     <%= image_tag "Doogies/Os_a_macher.png" %>
     <div class="card-body">
-      <p class="card-title d-flex justify-content-center">Os à macher</p>
+      <p class="card-title d-flex justify-content-center" style= "font-weight: 600; font-size: 15px;">Os à macher</p>
     </div>
     <ul class="list-group list-group-flush">
       <li class="list-group-item1">3,79 €</li>
