--- a/app/views/rewards/index.html.erb
+++ b/app/views/rewards/index.html.erb
@@ -9,28 +9,28 @@
 
   <div class="container">
     <div class="plaisir1">
-      <h4> <i class="fa-solid fa-unlock" style="color: #23ca02;"></i></i> <i class="fa-solid fa-paw mb-3 ms-3"> 50 </i></h4>
+      <h4> <i class="fa-solid fa-unlock" style="color: #23ca02;"></i></i> <i class="fa-solid fa-paw mb-3 ms-3" style="color: #895f33;"> 50 </i></h4>
       <%= render "doogpresent50" %>
     </div>
   </div>
 
   <div class="container">
     <div class="plaisir2">
-      <h4> <i class="fa-solid fa-unlock" style="color: #23ca02;"></i></i> <i class="fa-solid fa-paw mb-3 ms-3"> 100 </i></h4>
+      <h4> <i class="fa-solid fa-unlock" style="color: #23ca02;"></i></i> <i class="fa-solid fa-paw mb-3 ms-3" style="color: #895f33;"> 100 </i></h4>
             <%= render "doogpresent100" %>
     </div>
   </div>
 
   <div class="container">
     <div class="plaisir3">
-      <h4> <i class="fa-solid fa-lock" style="color: #ff0000;"></i></i> <i class="fa-solid fa-paw mb-3 ms-3"> 150 </i></h4>
+      <h4> <i class="fa-solid fa-lock" style="color: #ff0000;"></i></i> <i class="fa-solid fa-paw mb-3 ms-3" style="color: #895f33;"> 150 </i></h4>
             <%= render "doogpresent150" %>
     </div>
   </div>
 
   <div class="container">
     <div class="plaisir4">
-      <h4> <i class="fa-solid fa-lock" style="color: #ff0000;"></i> <i class="fa-solid fa-paw mb-3 ms-3"> 200 </i></h4>
+      <h4> <i class="fa-solid fa-lock" style="color: #ff0000;"></i> <i class="fa-solid fa-paw mb-3 ms-3" style="color: #895f33;"> 200 </i></h4>
             <%= render "doogpresent200" %>
     </div>
   </div>
