--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,73 +1,74 @@
+<div class="container">
+  <div class="row justify-content-evenly">
+    <div class="dropdown col-4">
+      <button class="btn btn dropdown-toggle" type="button" id="dropdownFilters" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
+        Filtres
+      </button>
+      <%# <div class="dropdown-menu" aria-labelledby="dropdownMenuButton"> %>
+        <%= simple_form_for(:filter, url: root_path, method: "GET", html: { class: 'dropdown-menu'}) do |f| %>
+          <%= f.input :water,
+                      as: :boolean,
+                      label: 'Eau',
+                      wrapper_html: { class: 'dropdown-item' },
+                      input_html: { checked: params[:filter] && params[:filter][:water] == "1" }
+                      %>
+          <%= f.input :trashs,
+                      as: :boolean,
+                      label: 'Déchets',
+                      wrapper_html: { class: 'dropdown-item' },
+                      input_html: { checked: params[:filter] && params[:filter][:trashs] == "1" }
+                      %>
+          <%= f.input :poopbag,
+                      as: :boolean,
+                      label: 'Sac à crottes',
+                      wrapper_html: { class: 'dropdown-item' },
+                      input_html: { checked: params[:filter] && params[:filter][:poopbag] == "1" }
+                      %>
+          <%= f.input :familyfriendly,
+                      as: :boolean,
+                      label: 'Convient aux familles',
+                      wrapper_html: { class: 'dropdown-item' },
+                      input_html: { checked: params[:filter] && params[:filter][:familyfriendly] == "1" }
+                      %>
+          <%= f.button :submit, "Filtrer", class: 'btn btn-primary dropdown-item' %>
+        <% end %>
+      <%# </div> %>
+    </div>
 
-<div class="d-flex">
-  <div class="dropdown">
-    <button class="btn btn dropdown-toggle" type="button" id="dropdownFilters" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
-      Filtres
-    </button>
-    <%# <div class="dropdown-menu" aria-labelledby="dropdownMenuButton"> %>
-      <%= simple_form_for(:filter, url: root_path, method: "GET", html: { class: 'dropdown-menu' }) do |f| %>
-        <%= f.input :water,
-                    as: :boolean,
-                    label: 'Eau',
-                    wrapper_html: { class: 'dropdown-item' },
-                    input_html: { checked: params[:filter] && params[:filter][:water] == "1" }
-                    %>
-        <%= f.input :trashs,
-                    as: :boolean,
-                    label: 'Déchets',
-                    wrapper_html: { class: 'dropdown-item' },
-                    input_html: { checked: params[:filter] && params[:filter][:trashs] == "1" }
-                    %>
-        <%= f.input :poopbag,
-                    as: :boolean,
-                    label: 'Sac à crottes',
-                    wrapper_html: { class: 'dropdown-item' },
-                    input_html: { checked: params[:filter] && params[:filter][:poopbag] == "1" }
-                    %>
-        <%= f.input :familyfriendly,
-                    as: :boolean,
-                    label: 'Convient aux familles',
-                    wrapper_html: { class: 'dropdown-item' },
-                    input_html: { checked: params[:filter] && params[:filter][:familyfriendly] == "1" }
-                    %>
-        <%= f.button :submit, "Filtrer", class: 'btn btn-primary dropdown-item' %>
-      <% end %>
-    <%# </div> %>
-  </div>
-
-  <div class="dropdown">
-    <button class="btn btn dropdown-toggle" type="button" id="dropdownFilters" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
-      Lieux
-    </button>
-    <%# <div class="dropdown-menu" aria-labelledby="dropdownMenuButton"> %>
-      <%= simple_form_for(:filter, url: root_path, method: "GET", html: { class: 'dropdown-menu' }) do |f| %>
-        <%= f.input :water,
-                    as: :boolean,
-                    label: 'Eau',
-                    wrapper_html: { class: 'dropdown-item' },
-                    input_html: { checked: params[:filter] && params[:filter][:water] == "1" }
-                    %>
-        <%= f.input :trashs,
-                    as: :boolean,
-                    label: 'Déchets',
-                    wrapper_html: { class: 'dropdown-item' },
-                    input_html: { checked: params[:filter] && params[:filter][:trashs] == "1" }
-                    %>
-        <%= f.input :poopbag,
-                    as: :boolean,
-                    label: 'Sac à crottes',
-                    wrapper_html: { class: 'dropdown-item' },
-                    input_html: { checked: params[:filter] && params[:filter][:poopbag] == "1" }
-                    %>
-        <%= f.input :familyfriendly,
-                    as: :boolean,
-                    label: 'Convient aux familles',
-                    wrapper_html: { class: 'dropdown-item' },
-                    input_html: { checked: params[:filter] && params[:filter][:familyfriendly] == "1" }
-                    %>
-        <%= f.button :submit, "Filtrer", class: 'btn btn-primary dropdown-item' %>
-      <% end %>
-    <%# </div> %>
+    <div class="dropdown col-4">
+      <button class="btn btn dropdown-toggle" type="button" id="dropdownFilters" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
+        Lieux
+      </button>
+      <%# <div class="dropdown-menu" aria-labelledby="dropdownMenuButton"> %>
+        <%= simple_form_for(:filter, url: root_path, method: "GET", html: { class: 'dropdown-menu' }) do |f| %>
+          <%= f.input :water,
+                      as: :boolean,
+                      label: 'Eau',
+                      wrapper_html: { class: 'dropdown-item' },
+                      input_html: { checked: params[:filter] && params[:filter][:water] == "1" }
+                      %>
+          <%= f.input :trashs,
+                      as: :boolean,
+                      label: 'Déchets',
+                      wrapper_html: { class: 'dropdown-item' },
+                      input_html: { checked: params[:filter] && params[:filter][:trashs] == "1" }
+                      %>
+          <%= f.input :poopbag,
+                      as: :boolean,
+                      label: 'Sac à crottes',
+                      wrapper_html: { class: 'dropdown-item' },
+                      input_html: { checked: params[:filter] && params[:filter][:poopbag] == "1" }
+                      %>
+          <%= f.input :familyfriendly,
+                      as: :boolean,
+                      label: 'Convient aux familles',
+                      wrapper_html: { class: 'dropdown-item' },
+                      input_html: { checked: params[:filter] && params[:filter][:familyfriendly] == "1" }
+                      %>
+          <%= f.button :submit, "Filtrer", class: 'btn btn-primary dropdown-item' %>
+        <% end %>
+      <%# </div> %>
+    </div>
   </div>
 </div>
 
