--- a/app/views/rewards/_doogcount.html.erb
+++ b/app/views/rewards/_doogcount.html.erb
@@ -1,10 +1,10 @@
-<h2 class="font-weight-bold font-monospace"><i class="fa-solid fa-paw"></i>  100 Doogies</h2>
+<h2><i class="fa-solid fa-paw"></i>  100 Doogies</h2>
 <div class="d-flex align-items-center" style="gap: 21px">
 
 <%# raise  %>
   <% 5.times do |position| %>
     <div class="d-flex flex-column align-items-center">
-      <div class="mb-2"><%= 50*position %></div>
+      <div class="mb-2" style="font-weight: 600;"><%= 50*position %></div>
       <div class="<%= logodoggies_class(position) %> d-flex justify-content-center align-items-center">
         <i class="fa-solid fa-paw" style="color: #ffffff;"></i>
       </div>
